# xpec-core

./: README.md  pyproject.toml  setup.py
docs/: Supplementary_Material.docx  installation.md
multipec/: eeg_preprocess.py  multipec_nets_epochs.py  simulation_utils.py
notebooks/: cnn_random_pruning_specificity.ipynb  eeg_network_classification.ipynb  eeg_pca_classification_insubject.ipynb
