[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xpec"
version = "0.1.0"
description = "xPEC"
readme = "README.md"
authors = [
    { name = "Karla Ivankovic", email = "kivankovic@researchmar.net" }
]
license = { text = "GNU GENERAL PUBLIC LICENSE" }
requires-python = ">=3.9"

dependencies = [
    "numpy>=1.26.0",
    "scipy>=1.11.4",
    "pandas>=2.2.2",
    "scikit-learn>=1.4.2",
    "joblib>=1.4.0",
    "matplotlib>=3.8.0",       
    "openpyxl>=3.1.2",         
    "h5py>=3.10.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["multipec"]
